@@ -149,6 +149,7 @@ MonoBehaviour:
   m_EditorClassIdentifier: 
   viewDistance: 6
   detectorTrigger: {fileID: 1616787424}
+  currentTarget: {fileID: 0}
   nearTargets: []
 --- !u!114 &5453467543051493301
 MonoBehaviour:
@@ -176,6 +177,18 @@ MonoBehaviour:
   m_EditorClassIdentifier: 
   movementComponent: {fileID: 3078692227378051769}
   animationController: {fileID: 812597705}
+--- !u!114 &7770106286789814139
+MonoBehaviour:
+  m_ObjectHideFlags: 0
+  m_CorrespondingSourceObject: {fileID: 0}
+  m_PrefabInstance: {fileID: 0}
+  m_PrefabAsset: {fileID: 0}
+  m_GameObject: {fileID: 6870845055111183722}
+  m_Enabled: 1
+  m_EditorHideFlags: 0
+  m_Script: {fileID: 11500000, guid: 9a49220b390bd694ba4c892639f8c6ef, type: 3}
+  m_Name: 
+  m_EditorClassIdentifier: 
 --- !u!1001 &3205375714705138787
 PrefabInstance:
   m_ObjectHideFlags: 0
