@@ -1,7 +1,5 @@
 ﻿using EndGame.Test.Events;
 using EndGame.Test.Events.AI;
-using System.Collections;
-using System.Collections.Generic;
 using UnityEngine;
 
 namespace EndGame.Test.AI
@@ -10,8 +8,9 @@ namespace EndGame.Test.AI
     {
         [SerializeField]
         private float maxChaseTime;
-
+        [SerializeField]
         private Actor currentTarget = null;
+
         private float currentChaseTime = 0.0f;
 
         /// <summary>
@@ -22,10 +21,8 @@ namespace EndGame.Test.AI
         public float GetMaxChaseTime { get => maxChaseTime; }
         public float GetCurrentChaseTime { get => currentChaseTime; }
 
-        protected override void Start()
+        private void Start()
         {
-            base.Start();
-
             // TODO subscribe to on target in sight.
             EventController.SubscribeToEvent(DecisionEvents.TARGET_IN_SIGHT, (args) => OnTargetInSight((OnTargetInSightEventArgs)args));
         }
@@ -39,10 +36,17 @@ namespace EndGame.Test.AI
         {
             if (_args.actor == GetOwner)
             {
+                currentChaseTime = 0;
+
                 currentTarget = _args.target;
 
                 Debug.DrawLine(GetOwner.transform.position, _args.target.transform.position, Color.magenta, 3.0f);
             }
+        }
+
+        protected override void AddToStateContoller(AIStateController _controller)
+        {
+            _controller.AddData(this);
         }
     }
 }
