@@ -1,7 +1,5 @@
 ﻿using EndGame.Test.Actors;
 using EndGame.Test.Events;
-using System.Collections;
-using System.Collections.Generic;
 using UnityEngine;
 
 namespace EndGame.Test
@@ -23,36 +21,39 @@ namespace EndGame.Test
 
         private void Start()
         {
-            // TODO remove this events.
-            movementComponent.OnMovement += OnActorMovement;
-            movementComponent.OnStandingStill += OnActorStandingStill;
-
+            EventController.SubscribeToEvent(ActorEvents.ACTOR_MOVEMENT, (args) => OnActorMovement((OnActorMovement)args));
+            EventController.SubscribeToEvent(ActorEvents.ACTOR_MOVEMENT_STOPPED, (args) => OnActorStoppedMovement((OnActorStoppedMovement)args));
             EventController.SubscribeToEvent(ActorEvents.ACTOR_TRIGGER_PULLED, (args) => OnActorPullingTrigger((OnActorPulledTrigger)args));
             EventController.SubscribeToEvent(ActorEvents.ACTOR_TRIGGER_RELEASED, (args) => OnActorReleasedTrigger((OnActorReleasedTrigger)args));
         }
 
         private void OnDestroy()
         {
-            movementComponent.OnMovement -= OnActorMovement;
-            movementComponent.OnStandingStill -= OnActorStandingStill;
-
+            EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_MOVEMENT, (args) => OnActorMovement((OnActorMovement)args));
+            EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_MOVEMENT_STOPPED, (args) => OnActorStoppedMovement((OnActorStoppedMovement)args));
             EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_TRIGGER_PULLED, (args) => OnActorPullingTrigger((OnActorPulledTrigger)args));
             EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_TRIGGER_RELEASED, (args) => OnActorReleasedTrigger((OnActorReleasedTrigger)args));
         }
 
-        private void OnActorMovement()
+        private void OnActorMovement(OnActorMovement _args)
         {
-            if (!animationController.GetBool(IS_MOVING_PARAMETER))
+            if (GetOwner == _args.actor)
             {
-                animationController.SetBool(IS_MOVING_PARAMETER, true);
+                if (!animationController.GetBool(IS_MOVING_PARAMETER))
+                {
+                    animationController.SetBool(IS_MOVING_PARAMETER, true);
+                }
             }
         }
 
-        private void OnActorStandingStill()
+        private void OnActorStoppedMovement(OnActorStoppedMovement _args)
         {
-            if (animationController.GetBool(IS_MOVING_PARAMETER))
+            if (GetOwner == _args.actor)
             {
-                animationController.SetBool(IS_MOVING_PARAMETER, false);
+                if (animationController.GetBool(IS_MOVING_PARAMETER))
+                {
+                    animationController.SetBool(IS_MOVING_PARAMETER, false);
+                }
             }
         }
 
@@ -60,7 +61,10 @@ namespace EndGame.Test
         {
             if (GetOwner == _args.actor)
             {
-                animationController.SetBool(IS_SHOOTING_PARAMETER, true);
+                if (!animationController.GetBool(IS_SHOOTING_PARAMETER))
+                {
+                    animationController.SetBool(IS_SHOOTING_PARAMETER, true);
+                }
             }
         }
 
@@ -68,7 +72,10 @@ namespace EndGame.Test
         {
             if (GetOwner == _args.actor)
             {
-                animationController.SetBool(IS_SHOOTING_PARAMETER, false);
+                if (animationController.GetBool(IS_SHOOTING_PARAMETER))
+                {
+                    animationController.SetBool(IS_SHOOTING_PARAMETER, false);
+                }
             }
         }
     }
