@@ -1,0 +1,42 @@
+﻿using EndGame.Test.Events;
+using UnityEngine;
+
+namespace EndGame.Test.Actors
+{
+    public class Rotator : ActorComponent
+    {
+        private void Start()
+        {
+            EventController.SubscribeToEvent(ActorEvents.ACTOR_MOVEMENT, (args) => OnActorMovement((OnActorMovement)args));
+            EventController.SubscribeToEvent(ActorEvents.ACTOR_FIRE_WEAPON, (args) => OnActorFireWeapon((OnActorFireWeapon)args));
+        }
+
+        private void OnDestroy()
+        {
+            EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_MOVEMENT, (args) => OnActorMovement((OnActorMovement)args));
+            EventController.UnSubscribeFromEvent(ActorEvents.ACTOR_FIRE_WEAPON, (args) => OnActorFireWeapon((OnActorFireWeapon)args));
+        }
+
+        private void OnActorMovement(OnActorMovement _args)
+        {
+            if (GetOwner == _args.actor)
+            {
+                RotateTowardsTargetDirection(_args.direction);
+            }
+        }
+
+        private void RotateTowardsTargetDirection(Vector3 _nextDirection)
+        {
+            GetOwner.transform.LookAt(GetOwner.transform.position + _nextDirection);
+        }
+
+        // TODO see if is beter to when is aiming or aim command.
+        private void OnActorFireWeapon(OnActorFireWeapon _args)
+        {
+            if (GetOwner == _args.actor)
+            {
+                RotateTowardsTargetDirection(_args.aimDirection);
+            }
+        }
+    }
+}
