@@ -5,13 +5,14 @@ The format is based on [Keep a Changelog](https://keepachangelog.com/en/1.0.0/),
 and this project adheres to [Semantic Versioning](https://semver.org/spec/v2.0.0.html).
 
 ## [Unreleased]
-## [10] 21-05-2020
+## [11] 21-05-2020
 ### Added
 - Bullet shooting to animation.
 - Weapon handler listens to shooting animation events.
+- Rotator component.
 
 ### Changed
-- The way states data are store is now by type.
+- The way states data are store is now by type. And now everybody access the states data throught the state controller.
 - Code refactoring.
 
 ## [10] 21-05-2020
